# drivendata-wildlife

./: README.md  pyproject.toml
cnn/: data.py  model.py  train.py
test/: test_data.py  test_model.py  test_train.py
