[tool.poetry]
name = "cnn"
version = "0.1.0"
description = ""
authors = ["Gijs Koot <gijs@spotr.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.3.0"
numpy = "^1.23.5"
torch = "^1.13.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "cnn.train:main"
